# rust-chanpool

./: Cargo.toml  README.md
examples/: advanced_usage.rs  basic_usage.rs
src/: lib.rs  worker.rs
